# Perturbio

./: .gitignore  .gitlab-ci.yml  MANIFEST.in  PACKAGE_QUALITY_REPORT.md  README.md  pyproject.toml
.github/workflows/: quick-test.yml  release.yml  tests.yml
documents/: design.md  mvp.md  scope.md
examples/: 01_quickstart.ipynb  02_complete_workflow.ipynb  03_advanced_scanpy_integration.md  04_cli_examples.md  README.md
examples/data/: example_guide_library.csv
perturbio/: __init__.py  cli.py  core.py
perturbio/analysis/: __init__.py  differential.py
perturbio/guides/: __init__.py  extraction.py
perturbio/io/: __init__.py  readers.py  writers.py
perturbio/plotting/: __init__.py  core.py
perturbio/results/: __init__.py  containers.py
perturbio/utils/: __init__.py
tests/: __init__.py  conftest.py  test_analysis.py  test_cli.py  test_core.py  test_guides.py  test_plotting.py
