[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "perturbio"
version = "0.1.0"
description = "Comprehensive Python package for Crop-Seq (CRISPR + single-cell RNA-seq) analysis"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Siavash Ghaffari"}
]
keywords = [
    "crispr",
    "crop-seq",
    "perturb-seq",
    "single-cell",
    "scrna-seq",
    "perturbation",
    "genomics",
    "bioinformatics"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "anndata>=0.8",
    "scanpy>=1.9",
    "pandas>=1.5",
    "numpy>=1.23",
    "scipy>=1.9",
    "matplotlib>=3.6",
    "seaborn>=0.12",
    "click>=8.0",
    "tqdm>=4.65",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]
bam = [
    "pysam>=0.20",
]
all = [
    "pysam>=0.20",
    "jupyter>=1.0",
    "plotly>=5.0",
]

[project.urls]
Homepage = "https://github.com/perturbio/perturbio"
Documentation = "https://perturbio.readthedocs.io"
Repository = "https://github.com/perturbio/perturbio"
"Bug Tracker" = "https://github.com/perturbio/perturbio/issues"

[project.scripts]
perturbio = "perturbio.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["perturbio*"]
exclude = ["tests*", "docs*", "examples*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=perturbio --cov-report=html --cov-report=term-missing"

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "PT"]
ignore = ["E501"]  # Line too long (handled by black)

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
